--- a/src/boom.sass
+++ b/src/boom.sass
@@ -15,7 +15,6 @@ nav
 	color: white
 	padding: 10px
 
-
 	ul
 		margin: 0
 		padding: 0
@@ -29,6 +28,7 @@ nav
 			padding: 0 10px
 
 	li
+		line-height: 24px
 		display: inline-block
 
 	a
@@ -36,10 +36,29 @@ nav
 		text-decoration: none
 	a.logo
 		font-weight: 700
+		line-height: 24px
 
 	div.wrapper
-		margin: 10px auto
+		margin: 0 auto
+		display: flex
 		max-width: 1100px
+
+	form
+		display: inline-block
+		margin: 0 auto
+		
+	input[type=text]
+		width: 300px
+		margin: 0 auto
+		box-sizing: border-box
+		border: 0
+		font-size: 14px
+		background-color: white
+		background-image: url('searchicon.png')
+		background-position: 10px 10px
+		background-repeat: no-repeat
+		padding: 5px
+
 
 body
 	.container
@@ -60,20 +79,22 @@ body
 					float: right
 					a
 						font-size: 12px
-						padding: 0 .5rem
-						border-right: 1px solid #e8e8e8
+						padding-left: .5rem
+
 						&:last-child
 							border: 0px
 			.tile
-				display: flex
+				//display: flex
 				margin: 10px
 				.thumbnail
 					float: left
 					margin-right: 10px
 					width: 80px
 					height: 80px
-					background: grey
+					background: whitesmoke
 				.tile_content
+					//width: 100%
+					//float: left
 					font-size: 14px
 					.tp
 						font-size: 20px
@@ -81,7 +102,25 @@ body
 						padding: 7px 0
 						color: grey
 					.tweet
-						.btn
+						.vote, .msg
+							float: right
+							display: inline-block
+							min-width: 35px
+							margin-left: 15px
+						.msg:before
+							display: inline-block
+							font-family: 'Material Icons'
+							content: "\E0CB"
+							vertical-align: middle
+							padding-right: 2px
+						.vote:before
+							display: inline-block
+							font-family: 'Material Icons'
+							content: "\E86B"
+							vertical-align: middle
+							padding-right: 2px
+						.badge
+							display: inline-block
 							cursor: pointer
 							color: white
 							padding: 5px
@@ -91,5 +130,57 @@ body
 
 		.panel
 			width: 30%
-			background: white
+			
 			float: right
+			.feed-panel
+				margin-bottom: 10px
+				background: white
+				padding: 10px
+				.title
+					padding: 10px
+				.feed
+					.tile
+						font-size: 14px
+						padding: 4px 10px
+						.thumbnail
+							float: left
+							height: 20px
+							width: 20px
+							background: whitesmoke
+							display: inline-block
+							margin-right: 10px
+						.text
+							line-height: 20px
+				
+.modal
+	display: none
+	position: fixed
+	z-index: 1
+	padding-top: 100px
+	left: 0
+	top: 0
+	width: 100%
+	height: 100%
+	overflow: auto
+	background-color: rgb(0, 0, 0)
+	background-color: rgba(0, 0, 0, 0.4)
+
+
+.modal-content
+	background-color: #fefefe
+	margin: auto
+	padding: 20px
+	border: 1px solid #888
+	width: 80%
+
+
+
+.close
+	color: #aaaaaa
+	float: right
+	font-size: 28px
+	font-weight: bold
+	&:hover, &:focus
+		color: #000
+		text-decoration: none
+		cursor: pointer
