--- a/src/profile.sass
+++ b/src/profile.sass
@@ -66,20 +66,15 @@ body
 		overflow: hidden
 		background: gray
 		height: 300px
-	.container
-		display: flex
-		max-width: 1100px
-		margin: 20px auto
 		.user
-
-			width: 100%
-			margin: -235px 50px 0 50px
+			padding: 90px 130px
+			display: flex
 			.thumbnail
 				background: white
 				border-radius: 50%
 				width: 120px
 				height: 120px
-				float: left
+				margin-right: 20px
 			.status
 				border-radius: 50%
 				width: 20px
@@ -87,23 +82,23 @@ body
 				background: lightgreen
 				margin: 0px 0 0 105px
 			.name
-				float:left
-				margin: 40px
-				display: inline-block
-				color: black
+				display: flex
+				flex-flow: column
+				flex: 1
+				justify-content: center
+				color: white
 				font-size: 20px
 				.username
 					font-size: 14px
-					color: $font-color
 			.tab
-				background: rgba(255, 255, 255, 0.58)
-				display: inline-block
+				display: flex
+				background: rgba(255, 255, 255, 0.18)
 				padding: 0 10px
 				margin: 30px 0
-				float: right
+				width: 250px
 				.item
+					flex: 1
 					text-align: center
-					display: inline-block
 					margin: 10px
 					font-size: 18px
 					border-radius: 50%
@@ -113,6 +108,103 @@ body
 						color: white
 						text-align: center
 						font-size: 14px
+
+	.container
+		display: flex
+		max-width: 1100px
+		margin: 20px auto
+		.panel-mid
+			flex: 1
+			
+			margin-right: 20px
+			.content
+				background: white
+				.title
+					padding: 10px
+					background: $secondary-color
+					color: white
+					.tab
+						float: right
+						a
+							font-size: 12px
+							padding-left: .5rem
+
+							&:last-child
+								border: 0px
+				.tile
+					//display: flex
+					padding: 10px
+					.thumbnail
+						float: left
+						margin-right: 10px
+						width: 80px
+						height: 80px
+						background: whitesmoke
+					.tile_content
+						//width: 100%
+						//float: left
+						font-size: 14px
+						.tp
+							font-size: 20px
+						.desc
+							padding: 7px 0
+							color: grey
+						.tweet
+							.vote, .msg
+								float: right
+								display: inline-block
+								min-width: 35px
+								margin-left: 15px
+							.msg:before
+								display: inline-block
+								font-family: 'Material Icons'
+								content: "\E0CB"
+								vertical-align: middle
+								padding-right: 2px
+							.vote:before
+								display: inline-block
+								font-family: 'Material Icons'
+								content: "\E86B"
+								vertical-align: middle
+								padding-right: 2px
+							.badge
+								display: inline-block
+								cursor: pointer
+								color: white
+								padding: 5px
+								background: $default-color
+								&:hover
+									background: $primary-color
+
+		.panel-left
+			width: 270px
+
+		.panel-right
+			width: 200px
+			margin-right: 20px
+
+		.panel-left, .panel-right
+			overflow: hidden
+			.feed-panel
+				margin-bottom: 10px
+				background: white
+				padding: 10px
+				.title
+					padding: 10px
+				.feed
+					.tile
+						font-size: 14px
+						padding: 4px 10px
+						.thumbnail
+							float: left
+							height: 20px
+							width: 20px
+							background: whitesmoke
+							display: inline-block
+							margin-right: 10px
+						.text
+							line-height: 20px
+		
 
 
 
